--- a/amazon_.html
+++ b/amazon_.html
@@ -42,7 +42,7 @@
                 </a>
 
                 <a class="cart-link header-link"href="checkouts.html">
-                    <div class="cart-quantity">3</div>
+                    <div class="cart-quantity">0</div>
                     <img class="cart-icon" src="images/icons/cart-icon.png">
                     <div class="cart-text">Cart</div>
                 </a>
@@ -56,9 +56,7 @@
             <div class="products-grid js-products-grid">
             </div>
         </div>
-        <script src="data/products.js"></script>
-        <script src="data/cart.js"></script>
-        <script src="scripts/amazon.js"></script>
+        <script type="module" src="scripts/amazon.js"></script>
 
     </body>
 
