--- a/amazon_.html
+++ b/amazon_.html
@@ -41,7 +41,7 @@
                     <span class="orders-text">& Orders</span>
                 </a>
 
-                <a class="cart-link header-link"href="  ">
+                <a class="cart-link header-link"href="checkouts.html">
                     <div class="cart-quantity"></div>
                     <img class="cart-icon" src="images/icons/cart-icon.png">
                     <div class="cart-text">Cart</div>
